--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-gesture-handler": "^2.7.1",
+    "react-native-maps": "^0.31.1",
     "react-native-paper": "^5.0.0-rc.8",
     "react-native-reanimated": "^2.11.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "tcomb-form-native": "^0.6.20",
-    "react-native-maps": "0.31.1"
+    "expo-location": "~14.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
